Added default chart and table fields.

--- a/css/app.css
+++ b/css/app.css
@@ -35,3 +35,7 @@ table.table-col-hover .col:hover::after {
     z-index: -1;        
 }
 
+h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
