--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,15 @@ html {
 	font-size: 14px !important;
 }
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+}
+
+.file-drop-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
