--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 html {
-  font-size: 14px !important;
+	font-size: 14px !important;
 }
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+}
+
+html._chrome-app,
+body._chrome-app {
+	overflow-y: auto;
 }
