--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,7 @@
 html {
 	font-size: 14px !important;
+	overflow-y: auto;
 }
 body {
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-}
-
-html._chrome-app,
-body._chrome-app {
 	overflow-y: auto;
 }
