--- a/src/app.css
+++ b/src/app.css
@@ -46,9 +46,15 @@ div.loading {
   overflow: hidden;
   position: absolute;
   width: 100%;
-  padding: 15px 15px 0 15px;
+  padding-top: 1.00rem;
+  padding-right: 1.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 1.25rem;
   height: 100%;
-  margin: -15px -15px 0 -15px;
+  margin-top: -1.00rem;
+  margin-right: -1.25rem;
+  margin-bottom: -0.25rem;
+  margin-left: -1.25rem;
 }
 
 div.loading:after {
@@ -96,22 +102,41 @@ h3,
   margin-bottom: 10px;
 }
 
-/* Bootstrap panel styling for react-grid-layout */
+/* Bootstrap card styling for react-grid-layout */
 
-.panel-react-grid {
+.react-grid-item {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.card-react-grid {
   height: 100%;
   margin-bottom: 0;
 }
 
-.panel-body-react-grid {
-  position: absolute;
-  top: 59px;
-  bottom: 15px;
-  left: 0;
-  right: 0;
+.card-body-react-grid {
   overflow-y: auto;
+  padding-top: 0.75rem;
+  padding-right: 1.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 1.25rem;
+  position: absolute;
+  width: 100%;
+  top: 51px;
+  bottom: 0;
 }
 
+.react-grid-item-drag-handle {
+  cursor: move;
+  padding: 0.50rem .75rem;
+}
+
+.card-btn-minify {
+  padding: 0;
+}
+
+/* Slide styles */
 .slider {
   width: 100%;
   max-width: 500px;
@@ -119,7 +144,6 @@ h3,
   /*border: 1px solid grey;*/
 }
 
-/* Slide styles */
 .handle {
   font-size: 0.9em;
   text-align: center;
@@ -153,14 +177,7 @@ h3,
 }
 
 .slider .handle {
-  top: 1px;
   width: 50px;
-  height: 24px;
-  line-height: 24px;
-}
-
-.react-grid-item-drag-handle {
-  cursor: move;
 }
 
 /* File drop styling */
@@ -180,7 +197,7 @@ h3,
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 2;
+  z-index: 11;
   display: none;
   pointer-events: none;
 }
@@ -193,7 +210,7 @@ h3,
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 10;
   pointer-events: none;
 }
 
