--- a/src/app.css
+++ b/src/app.css
@@ -5,36 +5,32 @@ table.table-col-hover {
   z-index: 1;
 }
 table.table-col-hover td,
-table.table-col-hover th,
-table.table-col-hover .row,
-table.table-col-hover .col {
+table.table-col-hover th {
   cursor: pointer;
   padding: 10px;
   position: relative;
 }
 
-table.table-col-hover td:hover::before,
-table.table-col-hover .row:hover::before {
-  background-color: #f5f5f5;
+table.table-col-hover td:hover::before {
+  background-color: rgba(0, 0, 0, 0.075);
   content: '\00a0';
   height: 100%;
   left: -5000px;
   position: absolute;
   top: 0;
   width: 10000px;
-  z-index: -1;
+  pointer-events: none;
 }
 
-table.table-col-hover td:hover::after,
-table.table-col-hover .col:hover::after {
-  background-color: #f5f5f5;
+table.table-col-hover td:hover::after {
+  background-color: rgba(0, 0, 0, 0.075);
   content: '\00a0';
   height: 10000px;
   left: 0;
   position: absolute;
   top: -5000px;
   width: 100%;
-  z-index: -1;
+  pointer-events: none;
 }
 
 /* Loading overlay */
